--- a/assets/html/quotes/quote2.html
+++ b/assets/html/quotes/quote2.html
@@ -1,4 +1,4 @@
 <div class="alert alert-success new p-4">
     <strong class="text-info">Saori</strong>
-    <p class="mb-0 text-light">people who use neopronouns scare me</p>
+    <p class="mb-0 text-light">people scare me</p>
 </div>
